# kinlayer

./: .dockerignore  .env.example  .gitignore  AGENTS.md  README.md  acceptance-scenarios.md  agent-integration-notes.md  alembic.ini  api-spec.md  candidate-lifecycle-and-payload.md  cli-spec.md  context-output-contract.md  data-model.md  docker-compose.yml  implementation-plan.md  interview-ledger.md  prd.md  pyproject.toml  web-ui-spec.md
backend/: Dockerfile  docker-entrypoint.sh
backend/alembic/: env.py
backend/src/kinlayer_backend/: __init__.py  (+5 more)
backend/tests/: conftest.py  test_agent_operations_api.py  test_agent_write_filter.py  test_candidate_models.py  test_candidates_api.py  test_cli.py  test_context_api.py  test_corrections_api.py  test_embeddings_api.py  test_entities_api.py  test_graph_ontology_api.py  test_kinlayer_client_script.py  test_migrations.py  test_relationship_models.py  test_relationships_api.py  test_retrieval_engine.py  test_system_api.py  test_token_mode.py
docs/: README.md
docs/agents/: agent-integration-notes.md  agent-write-instruction-pack.md
docs/specs/: acceptance-scenarios.md  api-spec.md  candidate-lifecycle-and-payload.md  cli-spec.md  context-output-contract.md  data-model.md  ontology-design.md  prd.md  web-ui-spec.md
frontend/: .dockerignore  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  ontologyOptions.ts  styles.css
scripts/: kinlayer_client.py  load-acceptance-fixtures.py  smoke-acceptance-api.py  smoke-acceptance-cli.sh  smoke-slice0.sh  web-smoke-checklist.md
(+65 files in other folders)
