[project]
name = "kinlayer"
version = "0.1.0"
description = "Local-first relationship context layer for AI agents."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.16.1",
  "fastapi>=0.115.12",
  "httpx>=0.28.1",
  "pydantic-settings>=2.9.1",
  "sqlalchemy>=2.0.41",
  "typer>=0.16.0",
  "uvicorn>=0.34.3",
  "psycopg[binary]>=3.2.9",
]

[project.optional-dependencies]
local-embeddings = [
  "sentence-transformers>=3.0.0",
]

[project.scripts]
kinlayer = "kinlayer_backend.cli:app"

[dependency-groups]
dev = [
  "pytest>=8.4.0",
  "ruff>=0.11.13",
]

[tool.uv]
package = true

[tool.setuptools.packages.find]
where = ["backend/src"]

[tool.ruff]
line-length = 100
target-version = "py311"
